--- a/package.json
+++ b/package.json
@@ -22,49 +22,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.5",
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
-    "@angular/core": "~11.0.5",
-    "@angular/forms": "~11.0.5",
-    "@angular/platform-browser": "~11.0.5",
-    "@angular/platform-browser-dynamic": "~11.0.5",
-    "@angular/router": "~11.0.5",
+    "@angular/animations": "~17.1.0",
+    "@angular/common": "~17.1.0",
+    "@angular/compiler": "~17.1.0",
+    "@angular/core": "~17.1.0",
+    "@angular/forms": "~17.1.0",
+    "@angular/platform-browser": "~17.1.0",
+    "@angular/platform-browser-dynamic": "~17.1.0",
+    "@angular/router": "~17.1.0",
     "bootstrap": "^4.4.1",
-    "ngx-bootstrap": "^4.3.0",
-    "rxjs": "~6.5.4",
-    "sortablejs": "^1.10.2",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "ngx-bootstrap": "^11.0.2",
+    "rxjs": "~7.8.1",
+    "sortablejs": "^1.15.0",
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.5",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
-    "@angular/language-service": "~11.0.5",
-    "@semantic-release/changelog": "^3.0.6",
-    "@semantic-release/git": "^7.0.18",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^8.10.59",
-    "@types/sortablejs": "^1.10.2",
-    "codelyzer": "^6.0.0",
-    "coveralls": "^3.0.9",
+    "@angular-devkit/build-angular": "~17.1.0",
+    "@angular/cli": "~17.1.0",
+    "@angular/compiler-cli": "~17.1.0",
+    "@angular/language-service": "~17.1.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@types/jasmine": "~5.1.4",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^20.10.5",
+    "@types/sortablejs": "^1.15.7",
+    "codelyzer": "^6.0.2",
+    "coveralls": "^3.1.1",
     "cpr": "^3.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.0.3",
+    "jasmine-core": "~5.1.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "ng-packagr": "^17.1.0",
     "ngx-spec": "^2.1.4",
     "protractor": "~7.0.0",
-    "semantic-release": "^15.14.0",
-    "ts-node": "~7.0.0",
-    "tsickle": "^0.39.1",
+    "semantic-release": "^22.0.12",
+    "ts-node": "~10.9.2",
+    "tslib": "^2.6.2",
     "tslint": "~6.1.3",
-    "typescript": "~4.0.3"
-  }
+    "typescript": "~5.3.3"
+  },
+  "packageManager": "pnpm@9.15.9+sha512.68046141893c66fad01c079231128e9afb89ef87e2691d69e4d40eee228988295fd4682181bae55b58418c3a253bde65a505ec7c5f9403ece5cc3cd37dcf2531"
 }
