--- a/.gitignore
+++ b/.gitignore
@@ -32,11 +32,13 @@ speed-measure-plugin.json
 .history/*
 
 # misc
+.angular
 /.sass-cache
 /connect.lock
 /coverage
 /libpeerconnection.log
 npm-debug.log
+pnpm-lock.yaml
 yarn-error.log
 testem.log
 /typings
