Update package.json with initial version
Added a "version" field set to "1.0.0" in package.json for proper version tracking. This ensures better package management and compatibility handling.

--- a/projects/ngx-sortablejs/package.json
+++ b/projects/ngx-sortablejs/package.json
@@ -22,5 +22,6 @@
     "@angular/core": "^17.0.0",
     "sortablejs": ">=1.7.0"
   },
-  "main": "src/public-api.ts"
+  "main": "src/public-api.ts",
+  "version": "1.0.0"
 }
