Update pnpm version and relax Angular peer dependency range
Upgraded pnpm to version 10.10.0 in the root package.json for improved features and fixes. Adjusted Angular peer dependencies in ngx-sortablejs to support a broader version range (11.0.0 to <20.0.0), enhancing compatibility across different Angular versions.

--- a/projects/ngx-sortablejs/package.json
+++ b/projects/ngx-sortablejs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ng-sortablejs",
   "keywords": [
+    "ng-sortablejs",
     "ngx-sortablejs",
     "angular-sortablejs",
     "sortablejs",
@@ -18,8 +19,8 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0",
+    "@angular/common": ">=11.0.0 <20.0.0",
+    "@angular/core": ">=11.0.0 <20.0.0",
     "sortablejs": ">=1.7.0"
   },
   "main": "src/public-api.ts",
