--- a/angular.json
+++ b/angular.json
@@ -15,12 +15,12 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/ngx-sortablejs-app",
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "browser": "src/main.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
@@ -65,25 +65,25 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-sortablejs-app:build"
+            "buildTarget": "ngx-sortablejs-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-sortablejs-app:build:production"
+              "buildTarget": "ngx-sortablejs-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-sortablejs-app:build"
+            "buildTarget": "ngx-sortablejs-app:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
@@ -97,28 +97,12 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
             ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-sortablejs-app:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "ngx-sortablejs-app:serve:production"
-            }
           }
         }
       }
@@ -141,23 +125,26 @@
           "options": {
             "main": "projects/ngx-sortablejs/src/test.ts",
             "tsConfig": "projects/ngx-sortablejs/tsconfig.spec.json",
-            "karmaConfig": "projects/ngx-sortablejs/karma.conf.js"
+            "karmaConfig": "projects/ngx-sortablejs/karma.conf.js",
+            "polyfills": ["zone.js"]
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "projects/ngx-sortablejs/tsconfig.lib.json",
-              "projects/ngx-sortablejs/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "projects/ngx-sortablejs/src/**/*.ts",
+              "projects/ngx-sortablejs/src/**/*.html"
             ]
           }
         }
       }
     }
   },
-  "defaultProject": "ngx-sortablejs-app"
+  "cli": {
+    "analytics": false,
+    "schematicCollections": [
+      "@angular"
+    ]
+  }
 }
