--- a/package.json
+++ b/package.json
@@ -22,50 +22,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.1.0",
-    "@angular/common": "~17.1.0",
-    "@angular/compiler": "~17.1.0",
-    "@angular/core": "~17.1.0",
-    "@angular/forms": "~17.1.0",
-    "@angular/platform-browser": "~17.1.0",
-    "@angular/platform-browser-dynamic": "~17.1.0",
-    "@angular/router": "~17.1.0",
-    "bootstrap": "^4.4.1",
-    "ngx-bootstrap": "^11.0.2",
-    "rxjs": "~7.8.1",
-    "sortablejs": "^1.15.0",
-    "tslib": "^2.6.2",
-    "zone.js": "~0.14.2"
+    "@angular/animations": "~19.2.9",
+    "@angular/common": "~19.2.9",
+    "@angular/compiler": "~19.2.9",
+    "@angular/core": "~19.2.9",
+    "@angular/forms": "~19.2.9",
+    "@angular/platform-browser": "~19.2.9",
+    "@angular/platform-browser-dynamic": "~19.2.9",
+    "@angular/router": "~19.2.9",
+    "bootstrap": "5.0.0",
+    "ngx-bootstrap": "^19.0.2",
+    "rxjs": "~7.8.2",
+    "sortablejs": "^1.15.6",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.1.0",
-    "@angular/cli": "~17.1.0",
-    "@angular/compiler-cli": "~17.1.0",
-    "@angular/language-service": "~17.1.0",
+    "@angular-devkit/build-angular": "~19.2.10",
+    "@angular/cli": "~19.2.10",
+    "@angular/compiler-cli": "~19.2.9",
+    "@angular/language-service": "~19.2.9",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/jasmine": "~5.1.4",
-    "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^20.10.5",
-    "@types/sortablejs": "^1.15.7",
+    "@types/jasmine": "~5.1.7",
+    "@types/jasminewd2": "^2.0.13",
+    "@types/node": "^20.17.32",
+    "@types/sortablejs": "^1.15.8",
     "codelyzer": "^6.0.2",
     "coveralls": "^3.1.1",
     "cpr": "^3.0.1",
-    "jasmine-core": "~5.1.1",
+    "jasmine-core": "~5.1.2",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.2",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "ng-packagr": "^17.1.0",
-    "ngx-spec": "^2.1.4",
+    "ng-packagr": "^19.2.2",
+    "ngx-spec": "^2.1.6",
     "protractor": "~7.0.0",
     "semantic-release": "^22.0.12",
     "ts-node": "~10.9.2",
     "tslib": "^2.6.2",
     "tslint": "~6.1.3",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
